--- a/Android/res/layout/row_music.xml
+++ b/Android/res/layout/row_music.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imgSongIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:src="@drawable/mp3"
         android:contentDescription="mp3"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:src="@drawable/mp3"/>
 
     <TextView
         android:id="@+id/lblSongTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/imgSongIcon"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/imgSongIcon"/>
 
     <TextView
         android:id="@+id/lblSongLength"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"/>
 
 
 </RelativeLayout>
