--- a/Android/res/menu/fragment_gps.xml
+++ b/Android/res/menu/fragment_gps.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/itemGPSOptions"
+        android:icon="@drawable/ic_action_storage"
+        android:showAsAction="ifRoom"
+        android:title="Options"/>
 
     <item
         android:id="@+id/itemGPSMap"
