--- a/Server/Webapp/app/views/settings.html
+++ b/Server/Webapp/app/views/settings.html
@@ -161,8 +161,8 @@
         					<div style="clear:both"></div>
         					<md-checkbox ng-model="call.light" aria-label="light" ng-change="toggleCall('light', call.light)">Signalisation avec la lumi&egrave;re</md-checkbox>
         					<md-checkbox ng-model="call.voice" aria-label="voice" ng-change="toggleCall('voice', call.voice)">Signalisation avec la voix</md-checkbox>
-        					<md-checkbox ng-model="call.caller" aria-label="caller" ng-change="toggleCall('caller', call.caller)">Lecture du nom de l'appelant</md-checkbox>
-        					<md-checkbox ng-model="call.message" aria-label="message" ng-change="toggleCall('message', call.message)">Lecture du contenu du message</md-checkbox>
+        					<md-checkbox ng-model="call.caller" aria-label="caller" ng-change="toggleCall('caller', call.caller)" ng-if=false>Lecture du nom de l'appelant</md-checkbox>
+        					<md-checkbox ng-model="call.message" aria-label="message" ng-change="toggleCall('message', call.message)" ng-if=false>Lecture du contenu du message</md-checkbox>
         				</md-content>
         			</div>
         		</div>
