--- a/Server/Webapp/app/views/settings.html
+++ b/Server/Webapp/app/views/settings.html
@@ -171,13 +171,16 @@
       </md-tab>
       <md-tab label="Utilisateurs">
         <md-content class="md-padding" ng-controller='UsersSettingsCtrl'>
-        	<div class="panel panel-info right30">
-        		<div class="panel-heading">Contr&ocirc;les</div>
-        		<div class="panel-body">
-        			<button class='btn btn-block btn-primary' ng-click='addUser()'><img alt="add" src='images/ic_action_new.png'></button>
-        		</div>
-        	</div>
-        	<div class="panel panel-info left70">
+        	<div layout=row layout-padding>
+				<md-input-container flex>
+					<label>Recherchez</label>
+					<input ng-model=item ng-enter="" flex ng-change="filter(item)">
+				</md-input-container>
+				<md-button class="md-fab md-primary md-mini" aria-label="FAB" ng-click="addUser()">
+				  	<md-icon md-svg-src="images/svg/ic_add_white_36px.svg"></md-icon>
+				</md-button>
+			</div>
+        	<div class="panel panel-info">
         		<div class="panel-heading">Utilisateurs</div>
         		<div class="panel-body">
         			<div layout=row layout-align="center center" ng-repeat="user in users"  layout-padding>
