Add at_mail block

--- a/Server/Webapp/app/views/scenario.html
+++ b/Server/Webapp/app/views/scenario.html
@@ -35,6 +35,7 @@
 	<block type="at_switch"></block>
 	<block type="at_music"></block>
 	<block type="at_gcm"></block>
+	<block type="at_mail"></block>
 	<block type="at_alarm_status"></block>
 	<block type="at_alarm"></block>
 	<block type="at_time"></block>
