Remove unused tags

--- a/Server/Webapp/app/views/geo.html
+++ b/Server/Webapp/app/views/geo.html
@@ -1,4 +1,4 @@
-<md-fab-speed-dial md-open="demo.isOpen" md-direction="left" ng-class="demo.selectedMode" style="float:right">
+<md-fab-speed-dial md-direction="left" style="float:right">
   <md-fab-trigger>
     <md-button aria-label="menu" class="md-fab md-warn">
       <md-icon md-svg-src="images/svg/ic_menu_white_24px.svg"></md-icon>
