--- a/Server/Webapp/app/views/devices.html
+++ b/Server/Webapp/app/views/devices.html
@@ -1,7 +1,7 @@
 <md-content>
 	<div layout=row layout-padding>
 		<md-input-container flex>
-			<label>Recherchez</label>
+			<label>Rechercher</label>
 			<input ng-model=item ng-enter="" flex ng-change="filter(item)">
 		</md-input-container>
 		<md-button class="md-fab md-primary md-mini" aria-label="FAB" ng-click="add(e)">
