--- a/Android/res/layout/fragment_plan.xml
+++ b/Android/res/layout/fragment_plan.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center_horizontal"
+              android:orientation="vertical">
 
-    <Switch
-        android:id="@+id/swtPlanAlarm"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:text="Alarme" />
+    <TextView
+        android:id="@+id/txtHomeMode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/txtHomeWeatherToday"
@@ -24,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
-            android:drawablePadding="10dp" />
+            android:drawablePadding="10dp"/>
 
         <TextView
             android:id="@+id/txtHomeWeatherTomorrow"
@@ -32,13 +30,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
-            android:drawablePadding="10dp" />
+            android:drawablePadding="10dp"/>
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imgPlanPlan"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="plan" />
+        android:contentDescription="plan"/>
 
 </LinearLayout>
