--- a/Android/res/layout/fragment_plan.xml
+++ b/Android/res/layout/fragment_plan.xml
@@ -8,7 +8,8 @@
     <TextView
         android:id="@+id/txtHomeMode"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="50dp"
+        android:gravity="center_vertical"/>
 
     <LinearLayout
         android:layout_width="match_parent"
