--- a/Android/res/layout/fragment_cuisine_add.xml
+++ b/Android/res/layout/fragment_cuisine_add.xml
@@ -1,84 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="40dp" >
+        android:padding="40dp">
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Nom du produit" />
+            android:text="@string/layout_fragment_cuisine_add_product_label"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/txtCuisineAddNom"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_weight="1"/>
 
             <ImageButton
                 android:id="@+id/btnCuisineAddScan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="scan"
-                android:src="@drawable/ic_action_camera" />
+                android:src="@drawable/ic_action_camera"/>
         </LinearLayout>
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Quantité" />
+            android:text="@string/layout_fragment_cuisine_add_product_quantity"/>
 
         <EditText
             android:id="@+id/txtCuisineQte"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:inputType="number" />
+            android:inputType="number"/>
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:labelFor="@+id/txtCuisineDate"
-            android:text="Date de péremption" />
+            android:text="@string/layout_fragment_cuisine_add_product_date_peremption"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/txtCuisineDate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:enabled="false" />
+                android:enabled="false"/>
 
             <ImageButton
                 android:id="@+id/btnCuisineAddDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="calendar"
-                android:src="@drawable/ic_action_go_to_today" />
+                android:src="@drawable/ic_action_go_to_today"/>
         </LinearLayout>
 
         <Spinner
             android:id="@+id/spinnerEndroit"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"/>
     </LinearLayout>
 
 </ScrollView>
