--- a/Android/res/layout/fragment_devices_add.xml
+++ b/Android/res/layout/fragment_devices_add.xml
@@ -1,75 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="40dp" >
+        android:padding="40dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:labelFor="@+id/txtDevicesAddName"
-            android:text="Nom de l&apos;appareil" />
+            android:text="@string/layout_fragment_devices_add_device_label"/>
 
         <EditText
             android:id="@+id/txtDevicesAddName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="text"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:labelFor="@+id/txtDevicesAddIp"
-            android:text="Adresse IP" />
+            android:text="@string/layout_fragment_devices_add_device_ip_address"/>
 
         <EditText
             android:id="@+id/txtDevicesAddIp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="phone" />
+            android:inputType="phone"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:labelFor="@+id/txtDevicesAddMac"
-            android:text="Adresse MAC" />
+            android:text="@string/layout_fragment_devices_add_device_mac_address"/>
 
         <EditText
             android:id="@+id/txtDevicesAddMac"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="text"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:labelFor="@+id/spDevicesAddType"
-            android:text="Catégorie" />
+            android:text="@string/layout_fragment_devices_add_device_type"/>
 
         <Spinner
             android:id="@+id/spDevicesAddType"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:labelFor="@+id/spDevicesAddConnection"
-            android:text="Connexion" />
+            android:text="@string/layout_fragment_devices_add_device_connection"/>
 
         <Spinner
             android:id="@+id/spDevicesAddConnection"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
 </ScrollView>
