--- a/Android/res/layout/fragment_dialog_sensor.xml
+++ b/Android/res/layout/fragment_dialog_sensor.xml
@@ -1,52 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:padding="20dp">
 
     <TextView
         android:id="@+id/lblSensorDialogAlias"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:labelFor="@+id/txtSensorDialogAlias"
-        android:text="Alias : " />
+        android:text="@string/layout_fragment_dialog_sensor_alias"/>
 
     <EditText
         android:id="@+id/txtSensorDialogAlias"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:inputType="text" />
+        android:inputType="text"/>
 
     <TextView
         android:id="@+id/lblSensorDialogRoom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:labelFor="@+id/spinnerSensorDialogRoom"
-        android:text="Pièce : " />
+        android:text="@string/layout_fragment_dialog_sensor_room"/>
 
     <Spinner
         android:id="@+id/spinnerSensorDialogRoom"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/lblSensorDialogTimestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp" />
+        android:layout_marginBottom="15dp"/>
 
     <CheckBox
         android:id="@+id/cbSensorDialogHistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Activer l&apos;historique" />
+        android:text="@string/layout_fragment_dialog_sensor_history"/>
 
     <CheckBox
         android:id="@+id/cbSensorDialogIgnore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ignorer ce capteur" />
+        android:text="@string/layout_fragment_dialog_sensor_ignore"/>
 
 </LinearLayout>
