--- a/Android/res/layout/fragment_pharmacie_add.xml
+++ b/Android/res/layout/fragment_pharmacie_add.xml
@@ -1,62 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="40dp" >
+        android:padding="40dp">
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Nom du médicament" />
+            android:text="@string/layout_fragment_pharmacie_add_name"/>
 
         <EditText
             android:id="@+id/txtPharmacieNom"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Quantité" />
+            android:text="@string/layout_fragment_pharmacie_add_quantity"/>
 
         <EditText
             android:id="@+id/txtPharmacieQte"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:inputType="number" />
+            android:inputType="number"/>
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Date de péremption" />
+            android:text="@string/layout_fragment_pharmacie_add_date_peremption"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/txtPharmacieDate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:enabled="false" />
+                android:enabled="false"/>
 
             <ImageButton
                 android:id="@+id/btnPharmacieAddDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="calendar"
-                android:src="@drawable/ic_action_go_to_today" />
+                android:src="@drawable/ic_action_go_to_today"/>
         </LinearLayout>
     </LinearLayout>
 
