--- a/Android/res/menu/fragment_devices_add.xml
+++ b/Android/res/menu/fragment_devices_add.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/itemDevicesAddSave"
         android:icon="@drawable/ic_action_accept"
         android:showAsAction="always"
-        android:title="Ajouter"/>
+        android:title="@string/menu_fragment_devices_add_add"/>
     <item
         android:id="@+id/itemDevicesAddThis"
         android:icon="@drawable/ic_action_phone"
         android:showAsAction="ifRoom"
-        android:title="Cet appareil"/>
+        android:title="@string/menu_fragment_devices_add_this_device"/>
 
 </menu>
