--- a/Android/res/menu/fragment_music.xml
+++ b/Android/res/menu/fragment_music.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/itemMusicSpeech"
         android:icon="@drawable/ic_action_volume_on"
         android:showAsAction="always"
-        android:title="Message vocal"/>
+        android:title="@string/menu_music_vocal_message"/>
     <item
         android:id="@+id/itemMusicRefresh"
         android:icon="@drawable/ic_action_refresh"
         android:showAsAction="ifRoom"
-        android:title="Actualiser"/>
+        android:title="@string/menu_refresh"/>
     <item
         android:id="@+id/itemMusicOn"
         android:checkable="true"
         android:showAsAction="never"
-        android:title="Allumé"/>
+        android:title="@string/menu_music_on"/>
     <item
         android:id="@+id/itemMusicWelcomeMusic"
         android:checkable="true"
         android:icon="@drawable/ic_action_headphones"
         android:showAsAction="never"
-        android:title="Musique de bienvenue"/>
+        android:title="@string/menu_music_welcome_music"/>
 
 </menu>
