--- a/Android/res/menu/menu_cuisine.xml
+++ b/Android/res/menu/menu_cuisine.xml
@@ -3,5 +3,5 @@
 
     <item
         android:id="@+id/itemCuisineAdd"
-        android:title="Ajouter"/>
+        android:title="@string/menu_add"/>
 </menu>
