--- a/Android/res/menu/menu_history.xml
+++ b/Android/res/menu/menu_history.xml
@@ -5,6 +5,6 @@
         android:id="@+id/itemHistoryRefresh"
         android:icon="@drawable/ic_action_refresh"
         android:showAsAction="always"
-        android:title="Actualiser"/>
+        android:title="@string/menu_refresh"/>
 
 </menu>
