--- a/Android/res/menu/context_cuisine.xml
+++ b/Android/res/menu/context_cuisine.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/itemCuisineOpen"
-        android:title="Ouvrir"/>
+        android:title="@string/menu_context_cuisine_open_title"/>
     <item
         android:id="@+id/itemCuisinePlus"
-        android:title="Incrémenter"/>
+        android:title="@string/menu_increment"/>
     <item
         android:id="@+id/itemCuisineMinus"
-        android:title="Décrémenter"/>
+        android:title="@string/menu_decrement"/>
     <item
         android:id="@+id/itemCuisineDel"
-        android:title="Supprimer"/>
+        android:title="@string/menu_delete"/>
     <item
         android:id="@+id/itemCuisineAvoid"
-        android:title="Ignorer"/>
+        android:title="@string/menu_context_cuisine_avoid_title"/>
 
 </menu>
