--- a/Android/res/menu/context_entretien.xml
+++ b/Android/res/menu/context_entretien.xml
@@ -3,12 +3,12 @@
 
     <item
         android:id="@+id/itemEntretienPlus"
-        android:title="Incrémenter"/>
+        android:title="@string/menu_increment"/>
     <item
         android:id="@+id/itemEntretienMinus"
-        android:title="Décrémenter"/>
+        android:title="@string/menu_decrement"/>
     <item
         android:id="@+id/itemEntretienDel"
-        android:title="Supprimer"/>
+        android:title="@string/menu_delete"/>
 
 </menu>
