--- a/Android/res/menu/fragment_courses.xml
+++ b/Android/res/menu/fragment_courses.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/itemCoursesAdd"
         android:icon="@drawable/ic_action_new"
         android:showAsAction="always"
-        android:title="Ajouter"/>
+        android:title="@string/menu_fragment_courses_add"/>
     <item
         android:id="@+id/itemCoursesNotify"
         android:icon="@drawable/ic_action_send_now"
         android:showAsAction="ifRoom"
-        android:title="Notifier"/>
+        android:title="@string/menu_fragment_courses_notification"/>
     <item
         android:id="@+id/itemCoursesOffline"
         android:icon="@drawable/ic_action_make_available_offline"
         android:showAsAction="ifRoom"
-        android:title="Mode hors-connexion"/>
+        android:title="@string/menu_fragment_courses_offline"/>
     <item
         android:id="@+id/itemCoursesClear"
         android:icon="@drawable/ic_action_discard"
         android:showAsAction="ifRoom"
-        android:title="Tout effacer"/>
+        android:title="@string/menu_fragment_courses_clear"/>
     <item
         android:id="@+id/itemCoursesRefresh"
         android:icon="@drawable/ic_action_refresh"
         android:showAsAction="ifRoom"
-        android:title="Actualiser"/>
+        android:title="@string/menu_refresh"/>
 
 </menu>
