--- a/Android/res/menu/fragment_devices.xml
+++ b/Android/res/menu/fragment_devices.xml
@@ -5,6 +5,6 @@
         android:id="@+id/itemDevicesAdd"
         android:icon="@drawable/ic_action_new"
         android:showAsAction="always"
-        android:title="Ajouter un appareil"/>
+        android:title="@string/menu_fragment_devices_add"/>
 
 </menu>
