--- a/Android/res/menu/fragment_entretien_add.xml
+++ b/Android/res/menu/fragment_entretien_add.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/itemEntretienAddSave"
         android:icon="@drawable/ic_action_accept"
         android:showAsAction="always"
-        android:title="Enregistrer"/>
+        android:title="@string/menu_save"/>
 
 </menu>
