--- a/Android/res/xml/pref_main.xml
+++ b/Android/res/xml/pref_main.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Preference
         android:key="main_connection"
-        android:title="Paramètres de connexion" />
+        android:title="@string/xml_pref_main_connection_title"/>
     <Preference
         android:key="main_security"
-        android:title="Paramètres de sécurité" />
+        android:title="@string/xml_pref_main_security_title"/>
     <Preference
         android:key="main_divers"
-        android:title="Divers" />
-    <!--<Preference
-        android:key="main_callnotifier"
-        android:title="Call Notifier" />-->
+        android:title="@string/xml_pref_main_divers_title"/>
 
 </PreferenceScreen>
