--- a/Android/res/xml/pref_security.xml
+++ b/Android/res/xml/pref_security.xml
@@ -2,32 +2,32 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-        android:summary="Sécurité"
-        android:title="Sécurité">
+        android:summary="@string/xml_pref_security_summary"
+        android:title="@string/xml_pref_security_title">
         <EditTextPreference
             android:icon="@drawable/ic_action_secure"
             android:key="api"
-            android:summary="Définir une clé pour s&apos;identifier aurpsè du serveur"
-            android:title="Clé de Connexion"/>
+            android:summary="@string/xml_pref_security_api_summary"
+            android:title="@string/xml_pref_security_api_title"/>
 
         <CheckBoxPreference
             android:icon="@drawable/ic_action_secure"
             android:key="pin"
-            android:summary="Sécuriser les paramètres"
-            android:title="Activer code PIN"/>
+            android:summary="@string/xml_pref_security_pin_summary"
+            android:title="@string/xml_pref_security_pin_title"/>
 
         <EditTextPreference
             android:icon="@drawable/ic_action_accounts"
             android:inputType="numberPassword"
             android:key="pinCode"
-            android:summary="Modifier le code PIN"
-            android:title="Code PIN"/>
+            android:summary="@string/xml_pref_security_pin_code_summary"
+            android:title="@string/xml_pref_security_pin_code_title"/>
 
         <CheckBoxPreference
             android:icon="@drawable/ic_action_screen_locked_to_landscape"
             android:key="ssl"
-            android:summary="Utiliser HTTPS en dehors du réseau domestique"
-            android:title="Utiliser SSL"/>
+            android:summary="@string/xml_pref_security_ssl_summary"
+            android:title="@string/xml_pref_security_ssl_title"/>
 
     </PreferenceCategory>
 
