--- a/Android/res/layout/row_course.xml
+++ b/Android/res/layout/row_course.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/llCoursesRow"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_gravity="center_vertical"
-              android:descendantFocusability="blocksDescendants"
-              android:orientation="horizontal"
-              android:padding="20dp">
+<LinearLayout
+    android:id="@+id/llCoursesRow"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
+    android:descendantFocusability="blocksDescendants"
+    android:orientation="horizontal"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/lblCoursesQuantity"
