--- a/Android/res/layout/row_pharmacie.xml
+++ b/Android/res/layout/row_pharmacie.xml
@@ -25,7 +25,7 @@
         android:id="@+id/lblPharmacieTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/listIcon"
+        android:layout_alignTop="@id/imgPharmacieIcon"
         android:layout_toRightOf="@id/imgPharmacieIcon"
         android:paddingTop="15dp"
         android:textStyle="bold"/>
