--- a/Android/res/layout/row_light.xml
+++ b/Android/res/layout/row_light.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:descendantFocusability="blocksDescendants"
-    android:orientation="vertical"
-    android:padding="10dp" >
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:descendantFocusability="blocksDescendants"
+              android:orientation="vertical"
+              android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imgLightIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="icon" />
+            android:contentDescription="icon"/>
 
         <TextView
             android:id="@+id/lblLightName"
@@ -24,14 +24,14 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <Switch
             android:id="@+id/swtLightToggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textOff="@string/switch_off"
-            android:textOn="@string/switch_on" />
+            android:textOff="@string/layout_row_lights_switch_off"
+            android:textOn="@string/layout_row_lights_switch_on"/>
     </LinearLayout>
 
     <SeekBar
@@ -39,6 +39,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:max="254" />
+        android:max="254"/>
 
 </LinearLayout>
