--- a/Android/res/layout/row_plant.xml
+++ b/Android/res/layout/row_plant.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:id="@+id/cvPlant"
-                                    xmlns:android="http://schemas.android.com/apk/res/android"
-                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:layout_margin="20dp"
-                                    card_view:cardCornerRadius="5dp"
-                                    card_view:cardElevation="5dp"
-                                    card_view:cardMaxElevation="15dp">
+<android.support.v7.widget.CardView
+    android:id="@+id/cvPlant"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_margin="20dp"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardElevation="5dp"
+    card_view:cardMaxElevation="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
