--- a/Server/Webapp/app/views/music.html
+++ b/Server/Webapp/app/views/music.html
@@ -55,15 +55,17 @@
 <div class="panel panel-info right50">
 	<div class="panel-heading">Musith&egrave;que</div>
 	<div class="panel-body">
-		<md-input-container>
-			<md-select ng-model=type.id aria-label="filtre">
-				<md-option ng-value=type.id ng-repeat="type in types track by type.id">{{type.title}}</md-option>
-			</md-select>
-		</md-input-container>
-		<md-input-container flex>
-			<label>Rechercher</label>
-			<input ng-model=search ng-change="filter(search)">
-		</md-input-container>
+		<div layout=column>
+			<md-input-container>
+				<md-select ng-model=type.id aria-label="filtre">
+					<md-option ng-value=type.id ng-repeat="type in types track by type.id">{{type.title}}</md-option>
+				</md-select>
+			</md-input-container>
+			<md-input-container flex>
+				<label>Rechercher</label>
+				<input ng-model=search ng-change="filter(search)">
+			</md-input-container>
+		</div>
 		<div class="nList" ng-repeat="playlist in playlists track by playlist.id" ng-if="type.id == 0 || type.id == 1">
 			<img alt="" ng-src="{{songPic(playlist)}}" style="margin-right:15px" ng-click="editPlaylist(playlist)">
 			<a href="" ng-click="play(playlist)" flex>{{playlist.title}}</a>
