--- a/Server/Webapp/app/views/sensors.html
+++ b/Server/Webapp/app/views/sensors.html
@@ -1,5 +1,5 @@
-
 <md-checkbox class=md-primary ng-model="sensors.showall" aria-label="history">Tout afficher</md-checkbox>
+<div style="clear:both"></div>
 <div class="panel panel-info left50">
 	<div class="panel-heading">
 		<div layout=row>
